--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap");
+@import "../../global.scss";
 
 * {
   outline: none;
@@ -19,6 +20,9 @@ form {
   padding: 55px 30px;
   outline: none;
   border-color: black;
+  @include mobile {
+    margin: 0px auto;
+  }
 }
 
 form .title h2 {
@@ -78,6 +82,9 @@ form .full textarea {
 
 form .action {
   margin-bottom: 32px;
+  @include mobile {
+    margin: 0px;
+  }
 }
 
 form .action input {
