--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -74,7 +74,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 80px 30%;
+    margin: 20px 30%;
     width: 80%;
 
     @include mobile {
