--- a/src/app.scss
+++ b/src/app.scss
@@ -5,7 +5,7 @@
 
   .sections {
     width: 100%;
-    height: calc(100vh - 70px);
+
     background-color: white;
     position: relative;
     top: 70px;
@@ -13,15 +13,13 @@
     scrollbar-width: none;
     @include mobile {
       top: 50px;
-      height: calc(100vh - 50px);
     }
 
     > * {
       width: 100vw;
-      height: calc(100vh - 70px);
+
       scroll-snap-align: start;
       @include mobile {
-        height: calc(100vh - 50px);
       }
     }
   }
